[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/UiController.gd" type="Script" id=1]
[ext_resource path="res://scripts/DialogueBox.gd" type="Script" id=2]
[ext_resource path="res://vfx/material/AnimatedMat.tres" type="Material" id=3]
[ext_resource path="res://assets/ui/Dog.png" type="Texture" id=4]
[ext_resource path="res://vfx/material/CanvasAnimatedMat.tres" type="Material" id=5]
[ext_resource path="res://ui/BaseFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/ui/Interact.png" type="Texture" id=7]
[ext_resource path="res://ui/OutlineFont.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.04, 0.04, 0.04, 0.654902 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.345098 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.75, 0.75, 0.75, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Game UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="DialogueBox" type="PanelContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -178.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox"]
margin_left = 240.0
margin_right = 1040.0
margin_bottom = 181.0
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueBox/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 161.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBox/MarginContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 141.0

[node name="ColorRect" type="ColorRect" parent="DialogueBox/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="Portrait" type="Sprite" parent="DialogueBox/MarginContainer/HBoxContainer/VBoxContainer/ColorRect"]
material = ExtResource( 3 )
position = Vector2( 50, 50 )

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 141.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Label" type="Label" parent="DialogueBox/MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 92.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 6 )
text = "Someone"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox/MarginContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 144.0
margin_bottom = 141.0
custom_constants/margin_left = 40

[node name="VBoxContainer2" type="VBoxContainer" parent="DialogueBox/MarginContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 760.0
margin_bottom = 141.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="DialogueBox/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 612.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "This is some dialogue text."
autowrap = true
clip_text = true

[node name="Button" type="Button" parent="DialogueBox/MarginContainer/HBoxContainer/VBoxContainer2" groups=[
"use_canvas_effect",
]]
material = ExtResource( 5 )
margin_top = 114.0
margin_right = 612.0
margin_bottom = 141.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
text = "↓  More  ↓"
flat = true
align = 2

[node name="Controls" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Controls" groups=[
"use_sprite_effect",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -183.484
margin_top = -136.452
margin_right = -133.484
margin_bottom = -86.452
texture = ExtResource( 4 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Controls" groups=[
"use_sprite_effect",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -222.559
margin_top = -77.3644
margin_right = -172.559
margin_bottom = -27.3644
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractLabel" type="Label" parent="Controls"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -159.134
margin_top = -58.2055
margin_right = -96.1344
margin_bottom = -40.2055
custom_fonts/font = ExtResource( 8 )
text = "Interact"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DogKey" type="Label" parent="Controls" groups=[
"use_canvas_effect",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -156.0
margin_top = -109.0
margin_right = -132.0
margin_bottom = -86.0
custom_fonts/font = ExtResource( 6 )
text = "X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DogLabel" type="Label" parent="Controls"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -121.005
margin_top = -118.976
margin_right = -101.005
margin_bottom = -100.976
custom_fonts/font = ExtResource( 8 )
text = "Speak"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractKey" type="Label" parent="Controls" groups=[
"use_canvas_effect",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -197.0
margin_top = -50.0
margin_right = -172.0
margin_bottom = -27.0
custom_fonts/font = ExtResource( 6 )
text = "Z"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -64.0
margin_right = 72.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="Inventory"]
margin_top = -10.0
margin_right = 190.0
margin_bottom = 40.0
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 8
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupInventory" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PopupInventory"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="PopupInventory/CenterContainer"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PopupInventory/CenterContainer/PanelContainer"]
margin_right = 150.0
margin_bottom = 48.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupInventory/CenterContainer/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 139.0
margin_bottom = 41.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="PopupInventory/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 110.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.317647, 0.345098, 0.368627, 1 )
text = "Select an Item"

[node name="Grid" type="GridContainer" parent="PopupInventory/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_bottom = 28.0
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 8
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}
